--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>The Rise of DogeCoin</h1>
-						<p>Rahul Javalagi<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p>by: Rahul Javalagi</p>
 					</header>
 
 				<!-- Nav -->
