--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Created using Stellar Template from https://html5up.net/. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Created using Stellar Template from <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
