--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
 										<header class="major">
 											<h2>Ipsum sed adipiscing</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>Dogecoin’s first major pump started around March 10, 2017, as a significant rise in retail investment 
+											started to pour into the crypto market for the first time, lifting all alternative coins, or altcoins. 
+											Over 70 days, the “joke” cryptocurrency rose by more than 1,890% from $0.00021 to a peak of $0.0042 on May 21. 
+											This shattered the previous all-time high of $0.0021 and sent the market cap soaring over $423 million. 
+											Shortly after, dogecoin (DOGE, +2.02%) slumped 75% during a two-week market pullback that affected all cryptocurrencies.</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
