--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>2017 crypto boom</h2>
 										</header>
 										<p>Dogecoin’s first major pump started around March 10, 2017, as a significant rise in retail investment 
 											started to pour into the crypto market for the first time, lifting all alternative coins, or altcoins. 
