--- a/index.html
+++ b/index.html
@@ -65,8 +65,14 @@
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Bitcoin breaks $19,783, lifts dogecoin</h3>
+										<p>By November of 2017, significant buying momentum had returned to the crypto market, with huge trading volumes 
+											driving bitcoin (BTC, +4.4%) to a height of $19,783. The global crypto market capitalization reached a 
+											staggering $830 billion and sent smaller-cap projects like dogecoin parabolic. <br><br>
+											
+											On Jan. 7, 2018, dogecoin broke over $0.02 – 380% higher than its previous high. Its market capitalization
+											at this stage was $1.6 billion. However, this was very short-lived and within eight days the price unraveled
+											over 70% back down to $0.0047. </p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
