--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
+							<section id="first" class="main">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Bitcoin breaks $19,783, lifts dogecoin</h2>
 								</header>
 								<ul class="features">
 									<li>
