--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<header class="major">
 									<h2>Bitcoin breaks $19,783, lifts dogecoin</h2>
 								</header>
-								<ul class="features">
+								<ul class="content">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Bitcoin breaks $19,783, lifts dogecoin</h3>
