--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							</section>
 
 						<!-- Second Section -->
-							<section id="second" class="main special">
+							<section id="second" class="main">
 								<header class="major">
 									<h2>Crypto markets rebound</h2>
 								</header>
