--- a/index.html
+++ b/index.html
@@ -87,10 +87,19 @@
 								<header class="major">
 									<h2>Crypto markets rebound</h2>
 								</header>
-								<p class="content">On April 14, 2018, just before the entire market entered “crypto winter” and crashed to former lows, a vast majority 
-									of crypto projects staged a brief recovery. In three days, dogecoin rose 103% from $0.0020 to $0.0041. For comparison, bitcoin 
-									only managed to secure a 40% rise within the same month. <br><br>
-									By this time, dogecoin’s market capitalization had been cut by more than half from its all-time high down to $573 million.
+								<ul class="content">
+									<li>
+										<span class="icon solid major style1 fa-code"></span>
+										<h3>Bitcoin breaks $19,783, lifts dogecoin</h3>
+										<p>By November of 2017, significant buying momentum had returned to the crypto market, with huge trading volumes 
+											driving bitcoin (BTC, +4.4%) to a height of $19,783. The global crypto market capitalization reached a 
+											staggering $830 billion and sent smaller-cap projects like dogecoin parabolic. <br><br>
+											
+											On Jan. 7, 2018, dogecoin broke over $0.02 – 380% higher than its previous high. Its market capitalization
+											at this stage was $1.6 billion. However, this was very short-lived and within eight days the price unraveled
+											over 70% back down to $0.0047. </p>
+									</li>
+								</ul>								
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
