--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">First Section</a></li>
 							<li><a href="#second">Second Section</a></li>
+							<li><a href="#third">Third Section</a></li>
 							<li><a href="#cta">Get Started</a></li>
 						</ul>
 					</nav>
@@ -106,14 +107,50 @@
 									</ul>
 								</footer>
 							</section>
+						
+						<!-- Third Section -->
+							<section id="third" class="main">
+								<header class="major">
+									<h2>Ethereum/Dogecoin bridge test</h2>
+								</header>
+								<ul class="content">
+									<li>
+										<span class="icon solid major style1 fa-code"></span>
+										<h3>Bitcoin breaks $19,783, lifts dogecoin</h3>
+										<p>The first major dogecoin rally that was largely uncorrelated to the rest of the crypto market was in September 2018
+											when a system test of the Dogecoin/Ethereum bridge was completed. <br>
+										The bridge was supposed to be a new update that would allow interoperability between the two blockchains. The announcement 
+											reignited community support for the project and dogecoin’s price rose 173% in 48 hours.<br>
+										It later transpired, however, that due to a crash in the price of ether – the main cryptocurrency of the Ethereum project
+											– there was insufficient funding to continue developing the bridge and the update was put on hold. Since then, there
+											has been no mention of whether this bridge between Dogecoin and Ethereum will ever be continued.  </p>
+									</li>
+								</ul>								
+								<footer class="major">
+									<ul class="actions special">
+										<li><a href="generic.html" class="button">Learn More</a></li>
+									</ul>
+								</footer>
+							</section>
 
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>WallStreetBets mania, Elon Musk tweet</h2>
 								</header>
+								<ul class="content">
+									<li>
+										<span class="icon solid major style1 fa-code"></span>
+										<h3>WallStreetBets mania, Elon Musk tweet</h3>
+										<p>On Jan. 11, 2021, the traditional financial markets were heavily disrupted by a subreddit group called the WallStreetBets
+											(aka WSB). These amateur stock traders decided to unite against traditional financial institutions and pump a number of 
+											stocks that major hedge funds were betting on falling in value, such as GameStop, BlackBerry, AMC, Nokia and Bed Bath & Beyond.<br>
+										On Jan. 28, the WSB stock market mania spilled across to dogecoin and catalyzed the biggest crypto rally of the year so far. In less than
+											two days, dogecoin skyrocketed to a new all-time high of $0.087 on the Binance exchange – representing a 1,100% gain. The rally was 
+											fueled in part by a number of tweets, including one from Elon Musk, the world’s richest man and avid dogecoin fan. <br>
+										Netflix’s “Tiger King” celebrity, Carole Baskin, also tweeted a video voicing her support for the dog-themed cryptocurrency.  </p>
+									</li>
+								</ul>			
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button primary">Get Started</a></li>
