--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image">
+									test
+									
+									</span>
 								</div>
 							</section>
 
