--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image">
+									<span class="spotlight">
 									test
 									
 									</span>
