--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ var maxDate = new Date();
 
 
 d3.csv("dogecoin.csv")
-    .row(function(d) { return { month: parseDate(d.month), price: Number(d.price.trim().slice(1))}; })
+    .row(function(d) { return { month: parseDate(d.month), price: Number(d.PriceUSD)}; })
     .get(function(error, rows) {
-	    max = d3.max(rows, function(d) { return d.price; });
+	    max = d3.max(rows, function(d) { return d.PriceUSD; });
 	    minDate = d3.min(rows, function(d) {return d.month; });
 		maxDate = d3.max(rows, function(d) { return d.month; });
 
