--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="spotlight">
+									<span class="spotlight"> <q> </q>
 <meta charset="utf-8">
 <style> /* set the CSS */
  
@@ -106,7 +106,7 @@ var	valueline = d3.svg.line()
 	.y(function(d) { return y(d.PriceUSD); });
     
 // Adds the svg canvas
-var	svg = d3.select("p")
+var	svg = d3.select("q")
 	.append("svg")
 		.attr("width", width + margin.left + margin.right)
 		.attr("height", height + margin.top + margin.bottom)
