--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 											<meta charset="utf-8">
 											<style> /* set the CSS */
  
-												body { font: 12px Arial;}
+												//body { font: 12px Arial;}
  
 												path { 
 												stroke: steelblue;
