--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 	height = 270 - margin.top - margin.bottom;
  
 // Parse the date / time
-var	parseDate = d3.time.format("%Y-%m-%d").parse;
+var	parseDate = d3.time.format("%m/%d/%Y").parse;
  
 // Set the ranges
 var	x = d3.time.scale().range([0, width]);
@@ -117,7 +117,7 @@ var	svg = d3.select("q")
 		.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
  
 // Get the data
-d3.csv("dogecoin.csv", function(error, data) {
+d3.csv("dogecoin1.csv", function(error, data) {
 	data.forEach(function(d) {
 		d.date = parseDate(d.date);
 		d.PriceUSD = +d.PriceUSD;
