--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 var	parseDate = d3.time.format("%m/%d/%Y").parse;
  
 // Set the ranges
-var	x = d3.time.scale().range([0, width]);
+var	x = d3.time.scale().range([0, "5/21/2017"]);
 var	y = d3.scale.linear().range([height, 0]);
  
 // Define the axes
