--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 var	parseDate = d3.time.format("%m/%d/%Y").parse;
  
 // Set the ranges
-var	x = d3.time.scale().range([0, "5/21/2017"]);
+var	x = d3.time.scale().range([0, width]);
 var	y = d3.scale.linear().range([height, 0]);
  
 // Define the axes
@@ -124,7 +124,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	});
  
 	// Scale the range of the data
-	x.domain(d3.extent(data, function(d) { return d.date; }));
+	x.domain(d3.extent(data, function(d) { if (d.date < "5/21/17"){return d.date;} }));
 	y.domain([0, d3.max(data, function(d) { return d.PriceUSD; })]);
  
 	// Add the valueline path.
