--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	});
  
 	// Scale the range of the data
-	x.domain(d3.extent(data, function(d) { return d.date;}));
+	x.domain(d3.extent(data, function(d,i) { if (i > 1518) {return d.date;}}));
 	y.domain([0, d3.max(data, function(d) { return d.PriceUSD; })]);
  
 	// Add the valueline path.
