--- a/index.html
+++ b/index.html
@@ -138,11 +138,13 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	svg.append("g")		
 		.attr("class", "x axis")
 		.attr("transform", "translate(0," + height + ")")
+	 	.style("font", "12px")
 		.call(xAxis);
  
 	// Add the Y Axis
 	svg.append("g")		
 		.attr("class", "y axis")
+	 	.style("font", "12px")
 		.call(yAxis);
  
 });
