--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@ var	y = d3.scale.linear().range([height, 0]);
  
 // Define the axes
 var	xAxis = d3.svg.axis().scale(x)
-	.orient("bottom").ticks(10);
+	.orient("bottom").ticks(10).style("font", "12px");
  
 var	yAxis = d3.svg.axis().scale(y)
-	.orient("left").ticks(20);
+	.orient("left").ticks(20).style("font", "12px");
  
 // Define the line
 var	valueline = d3.svg.line()
@@ -138,13 +138,11 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	svg.append("g")		
 		.attr("class", "x axis")
 		.attr("transform", "translate(0," + height + ")")
-	 	.style("font", "12px")
 		.call(xAxis);
  
 	// Add the Y Axis
 	svg.append("g")		
 		.attr("class", "y axis")
-	 	.style("font", "12px")
 		.call(yAxis);
  
 });
