--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@ var	y = d3.scale.linear().range([height, 0]);
  
 // Define the axes
 var	xAxis = d3.svg.axis().scale(x)
-	.orient("bottom").ticks(10).style("font", "12px");
+	.orient("bottom").ticks(10);
  
 var	yAxis = d3.svg.axis().scale(y)
-	.orient("left").ticks(20).style("font", "12px");
+	.orient("left").ticks(20);
  
 // Define the line
 var	valueline = d3.svg.line()
@@ -137,12 +137,14 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	// Add the X Axis
 	svg.append("g")		
 		.attr("class", "x axis")
+		.style("font", "8px")
 		.attr("transform", "translate(0," + height + ")")
 		.call(xAxis);
  
 	// Add the Y Axis
 	svg.append("g")		
 		.attr("class", "y axis")
+		.style("font", "8px")
 		.call(yAxis);
  
 });
