--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
 												stroke: grey;
 												stroke-width: 1;
 												shape-rendering: crispEdges;
-												font: 8px sans-serif; 
 											}
  
 											</style>
@@ -137,14 +136,14 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	// Add the X Axis
 	svg.append("g")		
 		.attr("class", "x axis")
-		.style("font", "8px times")
+		.style("font", "10px sans-serif")
 		.attr("transform", "translate(0," + height + ")")
 		.call(xAxis);
  
 	// Add the Y Axis
 	svg.append("g")		
 		.attr("class", "y axis")
-		.style("font", "8px times")
+		.style("font", "10px sans-serif")
 		.call(yAxis);
  
 });
