--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#third">Third Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#first" class="active">Introduction</a></li>
+							<li><a href="#second">First Section</a></li>
+							<li><a href="#third">Second Section</a></li>
+							<li><a href="#fourth">Third Section</a></li>
+							<li><a href="#fifth">Get Started</a></li>
 						</ul>
 					</nav>
 
@@ -39,7 +39,7 @@
 					<div id="main">
 
 						<!-- Introduction -->
-							<section id="intro" class="main">
+							<section id="first" class="main">
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
@@ -156,7 +156,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main">
+							<section id="second" class="main">
 								<header class="major">
 									<h2>Bitcoin breaks $19,783, lifts dogecoin</h2>
 								</header>
@@ -176,47 +176,43 @@ d3.csv("dogecoin1.csv", function(error, data) {
 							</section>
 
 						<!-- Second Section -->
-							<section id="second" class="main">
+							<section id="third" class="main">
 								<header class="major">
 									<h2>Crypto markets rebound</h2>
 								</header>
 								<ul class="content">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Bitcoin breaks $19,783, lifts dogecoin</h3>
-										<p>By November of 2017, significant buying momentum had returned to the crypto market, with huge trading volumes 
-											driving bitcoin (BTC, +4.4%) to a height of $19,783. The global crypto market capitalization reached a 
-											staggering $830 billion and sent smaller-cap projects like dogecoin parabolic. <br><br>
-											
-											On Jan. 7, 2018, dogecoin broke over $0.02 – 380% higher than its previous high. Its market capitalization
-											at this stage was $1.6 billion. However, this was very short-lived and within eight days the price unraveled
-											over 70% back down to $0.0047. </p>
+										<h3>Crypto markets rebound</h3>
+										<p>On April 14, 2018, just before the entire market entered “crypto winter” and crashed to former lows, a vast majority of crypto projects staged
+											a brief recovery. In three days, dogecoin rose 103% from $0.0020 to $0.0041. For comparison, bitcoin only managed to secure a 40% rise within
+											the same month.<br>
+											By this time, dogecoin’s market capitalization had been cut by more than half from its all-time high down to $573 million.									</li>
+								</ul>								</p>
 									</li>
 								</ul>								
 							</section>
 						
 						<!-- Third Section -->
-							<section id="third" class="main">
+							<section id="fourth" class="main">
 								<header class="major">
 									<h2>Ethereum/Dogecoin bridge test</h2>
 								</header>
 								<ul class="content">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Bitcoin breaks $19,783, lifts dogecoin</h3>
-										<p>The first major dogecoin rally that was largely uncorrelated to the rest of the crypto market was in September 2018
-											when a system test of the Dogecoin/Ethereum bridge was completed. <br>
-										The bridge was supposed to be a new update that would allow interoperability between the two blockchains. The announcement 
-											reignited community support for the project and dogecoin’s price rose 173% in 48 hours.<br>
-										It later transpired, however, that due to a crash in the price of ether – the main cryptocurrency of the Ethereum project
-											– there was insufficient funding to continue developing the bridge and the update was put on hold. Since then, there
-											has been no mention of whether this bridge between Dogecoin and Ethereum will ever be continued.  </p>
-									</li>
-								</ul>								
+										<h3>Crypto markets rebound</h3>
+										<p>The first major dogecoin rally that was largely uncorrelated to the rest of the crypto market was in September 2018 when a system
+											test of the Dogecoin/Ethereum bridge was completed. The bridge was supposed to be a new update that would allow interoperability
+											between the two blockchains. The announcement reignited community support for the project and dogecoin’s price rose 173% in 48 hours.
+											It later transpired, however, that due to a crash in the price of ether – the main cryptocurrency of the Ethereum project – there was
+											insufficient funding to continue developing the bridge and the update was put on hold. Since then, there has been no mention of whether
+											this bridge between Dogecoin and Ethereum will ever be continued. 
+										</p>
 							</section>
 
 						<!-- Get Started -->
-							<section id="cta" class="main special">
+							<section id="fifth" class="main special">
 								<header class="major">
 									<h2>WallStreetBets mania, Elon Musk tweet</h2>
 								</header>
