--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#first" class="active">Introduction</a></li>
-							<li><a href="#second">First Section</a></li>
-							<li><a href="#third">Second Section</a></li>
-							<li><a href="#fourth">Third Section</a></li>
-							<li><a href="#fifth">Get Started</a></li>
+							<li><a href="#first" class="active">1</a></li>
+							<li><a href="#second">2</a></li>
+							<li><a href="#third">3</a></li>
+							<li><a href="#fourth">4</a></li>
+							<li><a href="#fifth">5</a></li>
 						</ul>
 					</nav>
 
@@ -50,9 +50,6 @@
 											Over 70 days, the “joke” cryptocurrency rose by more than 1,890% from $0.00021 to a peak of $0.0042 on May 21. 
 											This shattered the previous all-time high of $0.0021 and sent the market cap soaring over $423 million. 
 											Shortly after, dogecoin (DOGE, +2.02%) slumped 75% during a two-week market pullback that affected all cryptocurrencies.</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
 									</div>
 									<span class="spotlight"> 
 										<q>
