--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>The Rise of Dogecoin</h1>
 						<p>by: Rahul Javalagi</p>
+						<p>A visualization of <a href="https://www.coindesk.com/top-5-dogecoin-pumps">Top 5 Dogecoin Pumps Through the Ages by Ollie Leach</a></p>
 					</header>
 
 				<!-- Nav -->
@@ -159,8 +160,6 @@ d3.csv("dogecoin1.csv", function(error, data) {
 								</header>
 								<ul class="content">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Bitcoin breaks $19,783, lifts dogecoin</h3>
 										<p>By November of 2017, significant buying momentum had returned to the crypto market, with huge trading volumes 
 											driving bitcoin (BTC, +4.4%) to a height of $19,783. The global crypto market capitalization reached a 
 											staggering $830 billion and sent smaller-cap projects like dogecoin parabolic. <br><br>
@@ -179,8 +178,6 @@ d3.csv("dogecoin1.csv", function(error, data) {
 								</header>
 								<ul class="content">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Crypto markets rebound</h3>
 										<p>On April 14, 2018, just before the entire market entered “crypto winter” and crashed to former lows, a vast majority of crypto projects staged
 											a brief recovery. In three days, dogecoin rose 103% from $0.0020 to $0.0041. For comparison, bitcoin only managed to secure a 40% rise within
 											the same month.<br>
@@ -197,8 +194,6 @@ d3.csv("dogecoin1.csv", function(error, data) {
 								</header>
 								<ul class="content">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Crypto markets rebound</h3>
 										<p>The first major dogecoin rally that was largely uncorrelated to the rest of the crypto market was in September 2018 when a system
 											test of the Dogecoin/Ethereum bridge was completed. The bridge was supposed to be a new update that would allow interoperability
 											between the two blockchains. The announcement reignited community support for the project and dogecoin’s price rose 173% in 48 hours.
@@ -215,8 +210,6 @@ d3.csv("dogecoin1.csv", function(error, data) {
 								</header>
 								<ul class="content">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>WallStreetBets mania, Elon Musk tweet</h3>
 										<p>On Jan. 11, 2021, the traditional financial markets were heavily disrupted by a subreddit group called the WallStreetBets
 											(aka WSB). These amateur stock traders decided to unite against traditional financial institutions and pump a number of 
 											stocks that major hedge funds were betting on falling in value, such as GameStop, BlackBerry, AMC, Nokia and Bed Bath & Beyond.<br>
