--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@ d3.csv("dogecoin1.csv", function(error, data) {
 		.attr("class", "y axis")
 		.style("font", "10px sans-serif")
 		.call(yAxis);
+	
+	// Add point
+	svg.selectAll("dot")
+    	.data(dataset)
+  	.enter().append("circle") // Uses the enter().append() method
+    	.attr("class", "dot") // Assign a class for styling
+    	.attr("cx", function(d, i) {return i == 1518})
+    	.attr("cy", function(d) { return d.PriceUSD;})
+    	.attr("r", 5)
  
 });
  
