--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 												stroke-width: 1;
 												shape-rendering: crispEdges;
 											}
+											.dot {
+    												fill: #ffab00;
+    												stroke: #fff;
+											}
  
 											</style>
 										</q>
