--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@ d3.csv("dogecoin1.csv", function(error, data) {
 		.call(yAxis);
 	
 	// Add point
-	svg.selectAll("dot")
-    	.data(dataset)
+	svg.selectAll(".dot")
+    	.data(data)
   	.enter().append("circle") // Uses the enter().append() method
     	.attr("class", "dot") // Assign a class for styling
     	.attr("cx", function(d, i) {return i == 1518})
