--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
     	.data(data)
   	.enter().append("circle") // Uses the enter().append() method
     	.attr("class", "dot") // Assign a class for styling
-    	.attr("cx", function(d, i) {return i == 1518})
+    	.attr("cx", function(d) {return if (d3.max(data, function(n) {return n.PriceUSD}) == d.PriceUSD) {return d.date}})
     	.attr("cy", function(d) { return d.PriceUSD;})
     	.attr("r", 5)
  
