--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@ d3.csv("dogecoin1.csv", function(error, data) {
     	.data(data)
   	.enter().append("circle") // Uses the enter().append() method
     	.attr("class", "dot") // Assign a class for styling
-    	.attr("cx", function(d) {return d.date;})
-    	.attr("cy", function(d) { return d.PriceUSD;})
+    	.attr("cx", "Tue May 23 2017 00:00:00 GMT-0500 (Central Daylight Time)")
+    	.attr("cy", "0.003476")
     	.attr("r", 5)
  
 });
