--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 		.call(yAxis);
 	
 	// Add point
-	svg.select("dot")
+	svg.select(".dot")
     	.data(data)
   	.enter().append("circle") // Uses the enter().append() method
     	.attr("class", "dot") // Assign a class for styling
