--- a/index.html
+++ b/index.html
@@ -149,9 +149,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 		.call(yAxis);
 	
 	// Add point
-	svg.select(".dot")
-    	.data(data)
-  	.enter().append("circle") // Uses the enter().append() method
+	svg.append("circle")
     	.attr("class", "dot") // Assign a class for styling
     	.attr("cx", "Tue May 23 2017 00:00:00 GMT-0500 (Central Daylight Time)")
     	.attr("cy", "0.003476")
