--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	// Add point
 	svg.append("circle")
     	.attr("class", "dot") // Assign a class for styling
-    	.attr("cx", function(d){return d.date;})
+    	.attr("cx", parseDate("Tue May 23 2017 00:00:00 GMT-0500 (Central Daylight Time)"))
     	.attr("cy", "0.003476")
     	.attr("r", 5)
  
