--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 											<meta charset="utf-8">
 											<style> /* set the CSS */
  
-												//body { font: 12px Arial;}
  
 												path { 
 												stroke: steelblue;
@@ -75,6 +74,7 @@
     												fill: #ffab00;
     												stroke: #fff;
 											}
+											.annotation { font: 10px Sans-Serif;)
  
 											</style>
 										</q>
@@ -161,8 +161,8 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	.attr("class", "annotation")
 	.attr("x", x(parseDate("5/23/2017")))
     	.attr("y", "0.003476")
-	.attr('text-anchor', 'middle')
-	.text("I'm a label");
+	.attr('text-anchor', 'right')
+	.text("2017 Crypto Boom");
  
 });
  
