--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	
 	svg.append("text")
 	.attr("class", "annotation")
-	.attr("x", x(parseDate("5/23/2017") - 100))
+	.attr("x", (x(parseDate("5/23/2017"))-100))
     	.attr("y", "0.003476")
-	.attr('text-anchor', 'left')
+	.attr('text-anchor', 'middle')
 	.text("2017 Crypto Boom");
  
 });
