--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     												fill: #ffab00;
     												stroke: #fff;
 											}
-											.annotation { font: 10px Sans-Serif;)
+											.annotation { font: 12px Sans-Serif;)
  
 											</style>
 										</q>
@@ -161,7 +161,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	.attr("class", "annotation")
 	.attr("x", (x(parseDate("5/23/2017"))-100))
     	.attr("y", "0.003476")
-	.attr('text-anchor', 'middle')
+	.attr('text-anchor', 'right')
 	.text("2017 Crypto Boom");
  
 });
