--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
 											This shattered the previous all-time high of $0.0021 and sent the market cap soaring over $423 million. 
 											Shortly after, dogecoin (DOGE, +2.02%) slumped 75% during a two-week market pullback that affected all cryptocurrencies.</p>
 									</div>
-									<span class="spotlight"> 
-										<div id="1">
+									<span id="1" class="spotlight"> 
 											<meta charset="utf-8">
 											<style> /* set the CSS */
  
@@ -77,7 +76,6 @@
 											.annotation { font: 12px Sans-Serif;)
  
 											</style>
-										</div>
 								
 												
 <!-- load the d3.js library -->	
