--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 											This shattered the previous all-time high of $0.0021 and sent the market cap soaring over $423 million. 
 											Shortly after, dogecoin (DOGE, +2.02%) slumped 75% during a two-week market pullback that affected all cryptocurrencies.</p>
 									</div>
-									<span id="1" class="spotlight"> 
+									<span id="one" class="spotlight"> 
 											<meta charset="utf-8">
 											<style> /* set the CSS */
  
@@ -108,7 +108,7 @@ var	valueline = d3.svg.line()
 	.y(function(d) { return y(d.PriceUSD); });
     
 // Adds the svg canvas
-var	svg1 = d3.select("#1")
+var	svg1 = d3.select("#one")
 	.append("svg")
 		.attr("width", width + margin.left + margin.right)
 		.attr("height", height + margin.top + margin.bottom)
